Contributed by: Matt Bishop / Kevin Krouse
port of xmlbeans to jdk1.3 on the branch 'xmlbeans-jdk13_branch'


git-svn-id: https://svn.apache.org/repos/asf/xmlbeans/branches/xmlbeans-jdk13_branch/v1@110823 13f79535-47bb-0310-9956-ffa450edef68